--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,8 +109,17 @@
     <!-- broadcast settings -->
     <string name="pref_title_broadcast_enabled">Broadcast locally</string>
     <string name="pref_summary_broadcast_enabled">Enable local broadcast of data so other apps (eg. NightWatch) can listen on new values</string>
-    <string name="title_activity_share_test">Share Test</string>
-    <string name="title_activity_system_status">System Status</string>
+    <string name="title_activity_share_test">ShareTest</string>
+    <string name="title_activity_system_status">SystemStatus</string>
+
+    <!-- pebble settings -->
+    <string name="pref_pebble_trend_watchface">Use Pebble Trend Watchface</string> 
+    <string name="pref_summary_pebble_trend_watchface">Use/install Pebble Trend Watchface (experimental)</string>
+    <string name="pref_pebble_display_trend">Display Trend</string>
+    <string name="pref_summary_display_trend">Show the BG trend on the xDrip Pebble watch face.</string>
+    <string name="pref_pebble_display_high_line">Display High Line</string>
+    <string name="pref_pebble_display_low_line">Display Low Line</string>
+
 
     <string name="toast_crash">Something went wrong :( a report has been sent to help fix the issue.</string>
     <string name="plugin_name">xDrip</string>
